# mcp-server-tester

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test-installer-scripts.yml
mcp_server_tester/: __init__.py  __main__.py  child_manager.py  managed_stdio.py  server.py
scripts/: install-macos.sh  install-windows.ps1
